[package]
name = "client-common"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
workflow-core = { path = "../../workflow-core" }
workflow-log = { path = "../../workflow-log" }
workflow-websocket = { path = "../../workflow-websocket" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt-multi-thread'] }
async-std = { version = "1.12.0", features = ['attributes'] }
