[package]
name = "workflow-websocket-example-client"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-core = { path = "../../workflow-core" }
workflow-log = { path = "../../workflow-log" }
workflow-websocket = { path = "../../workflow-websocket" }
# tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt-multi-thread'] }
# tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt-multi-thread'] }
async-std = { version = "1.12.0", features = ['attributes'] }

# tokio-tungstenite = "0.17.2"
# tungstenite = { version = "0.17.3", default-features = false }
