[package]
name = "workflow-websocket-example-server"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-log = { path = "../../workflow-log" }
workflow-websocket = { path = "../../workflow-websocket" }
tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
async-trait = "0.1.57"
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.2"
