[package]
name = "browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
workflow-core = { path = "../../../workflow-core" }
workflow-log = { path = "../../../workflow-log" }
workflow-websocket = { path = "../../../workflow-websocket" }
# tokio = { version = "1.20.1", features = ["rt-multi-thread"] }
# tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt-multi-thread'] }
# tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt-multi-thread'] }
async-std = { version = "1.12.0", features = ['attributes'] }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.31"
