[package]
name = "client-browser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
client-common = { path = "../../client-common" }

workflow-log = { path = "../../../workflow-log" }
workflow-html = { path = "../../../workflow-html" }
workflow-websocket = { path = "../../../workflow-websocket" }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.31"

[dependencies.web-sys]
version = "0.3.56"
features = [
    'Window',
    'Document',
    'Element',
    'Text',
]
